Change heading hierarchy from cvalarida
Co-Authored-By: Chris Valarida <chris.valarida@adhocteam.us>

--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -446,7 +446,7 @@ preSubmitInfo: {
 ### Default `PrivacyAgreement`
 ![Required checkbox before form submission](../../images/forms/Required-Checkbox.jpg)
 
-#### `CustomComponent` example
+### `CustomComponent` example
 ![Required checkbox before form submission](../../images/forms/preSubmitInfo-customComponent.jpeg)
 
 #### Usage guidelines
