Change heading hierarchy from cvalarida
Co-Authored-By: Chris Valarida <chris.valarida@adhocteam.us>

--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -449,7 +449,7 @@ preSubmitInfo: {
 ### `CustomComponent` example
 ![Required checkbox before form submission](../../images/forms/preSubmitInfo-customComponent.jpeg)
 
-#### Usage guidelines
+### Usage guidelines
 
 If you don't specify a `preSubmitInfo` section, no notice or checkbox appears above the submit button. Most applications will want to give some sort of notice to the user before they submit the form. Although this section is optional, we recommend you specify it.
 
