--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -5,9 +5,7 @@ tags: vagovprod, vagovstaging, vagovdev
 
 # Feature toggles
 
-Agile and user centric workflows often use testing of partially complete features to refine or research experiences. VSP provides feature toggles (also known as feature flags or feature flippers) that can be used in both vets-api and vets-website to manage unreleased features in a continuous integration environment. 
-
-Feature toggles enable VFS teams to test out new functionality (applications, features, VA.gov content pages, Metalsmith) in the VSP development, staging, or production environments for a set of users. Teams can enable or disable a feature for all users, a percentage of all users, a percentage of all logged in users, a list of users, or users defined in a method.
+VSP provides feature toggles (also known as feature flags or feature flippers) that can be used in both vets-api and vets-website to manage unreleased features in a continuous integration environment. Feature toggles enable VFS teams to test out new functionality (applications, features, VA.gov content pages, Metalsmith) in the VSP development, staging, or production environments for a set of users. Teams can enable or disable a feature for all users, a percentage of all users, a percentage of all logged in users, a list of users, or users defined in a method.
 
 Currently feature toggles are managed by designated administrators (ask in #VSP-Platform-Support slack), but users will be allowed more access in the future. For now, tag the following groups in Slack for more information:
 - Troubleshooting: #vsp-product-support
@@ -16,10 +14,11 @@ Currently feature toggles are managed by designated administrators (ask in #VSP-
 - Training documents: #vsp-tools-fe
 - Product feedback or new feature requests: #vsp-tools-fe
 
-Feature toggles are powered by an open-source gem called [Flipper gem](https://github.com/jnunemaker/flipper). Feature toggles:
+Feature toggles:
 - Allow for production toggle switching without redeploying vets-website
 - Provide a user interface for managing feature toggle behavior
 - Provide code helpers for handling common user experience scenarios
+- Are powered by an open-source gem called [Flipper gem](https://github.com/jnunemaker/flipper)
 
 ## Client behavior and other design considerations
 
@@ -28,55 +27,19 @@ Feature toggles are powered by an open-source gem called [Flipper gem](https://g
 3. After the page is rendered, the feature toggle client retrieves the latest toggle values from the feature toggle service.
 4. The page is updated using the latest feature toggle values.
 
-### User experience (UX) considerations
+### Considering the user experience (UX)
 
 There are a couple of ways to use feature toggles, both of which have UX trade offs:
 
 - **Use the bootstrapped values on the initial render.** The application uses the values from the static page first and _updates_ the markup if the values retrieved from the service are different. This works well for content that is not visible on the initial render of the page. Ideally, the update is either not visible to users or comes into view using a simple CSS transition.
 - **Ignore the bootstrapped values and show a loading state for the feature.** The applicaton shows a loading state for the new feature while the toggle values are retrieved from the service. This works well for content that is visible on the initial render of the page. There's no standardized approach — the way is dependent on your UX goals.
 
-### <a id="writing-good-feature-flags">Writing good feature flags</a>
+### <a id="writing-good-feature-flags">Writing good feature toggles</a>
 
-- New features or applications should be merged often so they can be included as part of the daily continuous integration deploy.
-- Feature flagged enhancements should be made with code that is [easy to delete](https://programmingisterrible.com/post/139222674273/write-code-that-is-easy-to-delete-not-easy-to) — ideally done simply and with as few checks as possible. Repeating yourself is acceptable in feature flagged code.
-- Making code that is easy to delete ensures that deprecated code is quickly removed once a feature is released.
-- Making features or applications available in production should only be done as needed for testing with users.
-
-## <a id="flipper_ui">Enabling and disabling features</a>
-
-You can enable or disable features in the Flipper user interface (UI):
-
-1. Navigate to the Flipper UI at the following URLs:
-
-|Environment|URL|
-|---|---|
-|Dev|http://localhost:3000/flipper/features|
-|Staging|https://staging-api.va.gov/flipper/features| 
-|Production|https://api.va.gov/flipper/features|
-
-2. To access the Flipper UI, you must sign in using an identity-verified id.me user that is listed in [settings.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/settings.yml):
-
-```
-flipper:
-  admin_user_emails:
-    - email@email.us
-    - email1@email.us
-```
-
-   <b>Notes:</b> 
-   - If you are not on the list, you can add yourself or your teammates in the file. 
-   - If you're not sure if your account is identity-verified, you can check by going to [this page](https://www.va.gov/profile/). If you need to verify your account you'll see a "Verify with ID.me" button.
-
-3. Once you have logged into the Flipper UI, you can perform the following actions:
-   - Select "Enable for everyone" or "Disable for everyone" to enable or disable the feature for all users. 
-   - For a gradual rollout or an a/b test you can use "Percentage of Logged in Users." "Percentage of Logged in Users" will enable the feature for the same users each time they return to the site as long as you don't change the percentage. 
-   - Use "Percentage of Time" to enable a feature for all users for a percentage of time.
-   - Register a "Group" of users to enable a feature for.
-   - You can also roll out a feature for a select few users by adding their email address to the “Users” section. For performance reasons, the list of users is intended to be small — do not use this option for hundreds of users.
-
-   The values of each toggle are cached in memory for one minute, so it may take that long to see the effect of enabling or disabling the toggle.
-     
-   <img width="1287" alt="Screen Shot" src="https://user-images.githubusercontent.com/19188/74881655-b4d11a80-533b-11ea-8e97-fdea24c10830.png">
+- Remember that each environment has its own set of feature toggle values.
+- Test your feature toggle in staging before using it in production.
+- Remove feature toggles as soon as they are not needed.
+- Make toggles that are [easy to delete](https://programmingisterrible.com/post/139222674273/write-code-that-is-easy-to-delete-not-easy-to) by gating a behavior in as few places as possible. It's often better to have blocks of repeating code that can be quickly deleted later than it is to gate several small pieces of code.
 
 ## <a id="add-feature-flag">Adding a new feature toggle</a>
 
@@ -146,21 +109,46 @@ const FEATURE_FLAG_NAMES = Object.freeze({
  
  Currently the feature toggle values are only available on the global redux state.
 
-9. Use the [Flipper UI](#flipper_ui) to test out the toggle locally.
+9. Use the [Flipper UI](#flipper_ui) to test out the toggle locally. Refresh the page to update the feature toggle state. This value can take up to a minute to update in staging and production.
 
-  ![](../../../images/platform/feature-flags/change-feature-toggle-value.png)
-  
-  Updating the feature toggle state on the website requires refreshing the page. This value can take up to a minute to update in staging and production.
+## <a id="flipper_ui">Enabling and disabling features</a>
 
-### Other considerations
+You can enable or disable features in the Flipper UI:
 
-- Each environment has its own set of feature toggle values.
-- Test your feature toggle in staging before using it in production.
-- Remove release toggles as soon as they are not needed.
-- Make toggles that are easy to delete by gating a behavior in as few places as possible. It's often better to have blocks of repeating code that can be quickly deleted later than it is to gate several small pieces of code
+1. Navigate to the Flipper UI at the following URLs:
+
+|Environment|URL|
+|---|---|
+|Dev|http://localhost:3000/flipper/features|
+|Staging|https://staging-api.va.gov/flipper/features| 
+|Production|https://api.va.gov/flipper/features|
+
+2. To access the Flipper UI, you must sign in using an identity-verified id.me user that is listed in [settings.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/settings.yml):
+
+```
+flipper:
+  admin_user_emails:
+    - email@email.us
+    - email1@email.us
+```
+
+   <b>Notes:</b> 
+   - If you are not on the list, you can add yourself or your teammates to the file. 
+   - If you're not sure if your account is identity-verified, you can check by going to [this page](https://www.va.gov/profile/). If you need to verify your account you'll see a "Verify with ID.me" button.
+
+3. Once you have logged into the Flipper UI, you can perform the following actions:
+   - Select "Enable for everyone" or "Disable for everyone" to enable or disable the feature for all users. 
+   - For a gradual rollout or an a/b test you can use "Percentage of Logged in Users." "Percentage of Logged in Users" will enable the feature for the same users each time they return to the site as long as you don't change the percentage. 
+   - Use "Percentage of Time" to enable a feature for all users for a percentage of time.
+   - Register a "Group" of users to enable a feature for.
+   - You can also roll out a feature for a select few users by adding their email address to the “Users” section. For performance reasons, the list of users is intended to be small — do not use this option for hundreds of users.
+
+   The values of each toggle are cached in memory for one minute, so it may take that long to see the effect of enabling or disabling the toggle.
+     
+   <img width="1287" alt="Screen Shot" src="https://user-images.githubusercontent.com/19188/74881655-b4d11a80-533b-11ea-8e97-fdea24c10830.png">
 
 ## Testing new applications and updates to existing applications
-_Use the methods described in the sections about [enabling and disabling features](#flipper_ui) and [adding feature toggles](#add-feature-flag) before using this method to test features._
+_Use the method described above to [add](#add-feature-flag) and [enable/disable](#flipper_ui) feature toggles. The method described in this section will eventually be phased out._
 
 In the [staging environment](https://staging.va.gov), you can test unreleased features or applications using [!isProduction()](https://github.com/department-of-veterans-affairs/vets-website/blob/10380007a3ec77047be10e4fb2a42d343c22c5d3/src/platform/utilities/environment/index.js).
 
@@ -171,7 +159,7 @@ In the [production environment](https://www.va.gov), you can test unreleased fea
 <b>Note:</b> Unreleased applications can be made available on production behind a password by setting `protected: yes` in [react_routes.yml](https://github.com/department-of-veterans-affairs/devops/blob/e1030d1a499e39eaeceb8f4bdcbd33baf7ee946d/ansible/deployment/config/revproxy-vagov/vars/react_routes.yml). External teams should work with their DSVA contact to request support for enabling this.
 
 ## Testing content pages
-_Use the methods described in the sections about [enabling and disabling features](#flipper_ui) and [adding feature toggles](#add-feature-flag) before using this method to test features._
+_Use the method described above to [add](#add-feature-flag) and [enable/disable](#flipper_ui) feature toggles. The method described in this section will eventually be phased out._
 
 ### App-landing pages generated by manifest.json
 Applications can control the HTML landing page associated with the application via a `template` property in the application's `manifest.json`. Properties defined inside the `template` property will pass through the Metalsmith templating process the same way as a vagov-content `.md` file. This means that via the `template` property, your `manifest.json` can implement a feature flag the same way as a `.md` file to prevent its HTML page from rendering in production environments. For example:
@@ -211,8 +199,8 @@ vagovdev: false
 localhost: false
 ```
 
-## CMS feature flags
-_Use the methods described in the sections about [enabling and disabling features](#flipper_ui) and [adding feature toggles](#add-feature-flag) before using this method to test features._
+## Testing CMS feature flags
+_Use the method described above to [add](#add-feature-flag) and [enable/disable](#flipper_ui) feature toggles. The method described in this section will eventually be phased out._
 
 VA.gov creates some pages based on content from the VA's Drupal CMS. The CMS has its own content model, which can sometimes change. When those changes modify the existing structure of the content model, the queries and templates in vets-website that expect a different model may break. And because the CMS and vets-website are separate systems with different deployment processes, we can't push up changes in both systems simultaneously. In order to keep the two systems in sync, we need to be able to turn features on and off in vets-website depending on what environment we're in, and update that feature state whenever a cms deployment happens.
 
