--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -5,7 +5,7 @@ tags: vagovprod, vagovstaging, vagovdev
 
 # Feature toggles
 
-VSP provides feature toggles (also known as feature flags or feature flippers) that can be used in both vets-api and vets-website to manage unreleased features in a continuous integration environment. Feature toggles enable VFS teams to test out new functionality (applications, features, VA.gov content pages, Metalsmith) in the VSP development, staging, or production environments for a set of users. Teams can enable or disable a feature for all users, a percentage of all users, a percentage of all logged in users, a list of users, or users defined in a method.
+Feature toggles (also known as feature flags or feature flippers) can be used in both vets-api and vets-website to manage unreleased features in a continuous integration environment. Feature toggles enable VFS teams to test out new functionality (applications, features, VA.gov content pages, Metalsmith) in the VSP development, staging, or production environments for a set of users. Teams can enable or disable a feature for all users, a percentage of all users, a percentage of all logged in users, a list of users, or users defined in a method.
 
 Feature toggles:
 - Allow for production toggle switching without redeploying vets-website
@@ -40,7 +40,7 @@ Follow these steps to add and use a new feature toggle in vets-website:
 
 1. Determine your feature toggle name.
 
-<b>Note:</b> There are no naming conventions yet. Current examples put the application name first, such as _facilityLocatorShowCommunityCares_ and _profileShowDirectDeposit_.
+   <b>Note:</b> There are no naming conventions yet. Current examples put the application name first, such as _facilityLocatorShowCommunityCares_ and _profileShowDirectDeposit_.
 
 2. Add the feature name to vets-api (in snake case) by updating [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml):
 
@@ -58,51 +58,87 @@ Follow these steps to add and use a new feature toggle in vets-website:
 
 5. Add the feature toggle name (in camel case) to vets-website by updating [featureFlagNames.js](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/utilities/feature-toggles/featureFlagNames.js):
 
- ```js
+```js
 const FEATURE_FLAG_NAMES = Object.freeze({
-  showYourFeatureName: 'appNameThenYourFeatureName',
- ```
+ showYourFeatureName: 'appNameThenYourFeatureName',
+```
 
 6. Submit a PR for each feature. Crosslinking the PRs in a comment will make it easier for the reviewers to check.
 
-7. Use the selector helper to build a selector for your feature toggle. For example:
+7. Use the selector helper to build a selector for your feature toggle.
 
- ```js
- // import the toggleValues helper
- import { toggleValues } from 'platform/site-wide/feature-toggles/selectors';
- 
- // use the toggleValues helper to select the toggle values list
- export const appNameThenYourFeatureName = state =>
-  toggleValues(state).appNameThenYourFeatureName;
- ```
- 
- The `toggleValues` object is simply a flat list of `toggleName` and boolean key value pairs.
+   **Note:** In the following example, the `toggleValues` object is a flat list of `toggleName` and boolean key value pairs.
+
+```js
+// import the toggleValues helper
+import { toggleValues } from 'platform/site-wide/feature-toggles/selectors';
+
+// use the toggleValues helper to select the toggle values list
+export const appNameThenYourFeatureName = state =>
+ toggleValues(state).appNameThenYourFeatureName;
+```
 
 8. Use the feature toggle value to gate your new behavior. For example, you can use the select above in `mapStateToProps` to pass the toggle as a prop into your component.
 
- ```js
- function mapStateToProps(state) {
-   return {
-     showYourFeatureName:
-       appNameThenYourFeatureName(state),
-   };
- }
+**Note:** Currently the feature toggle values are only available on the global redux state.
 
- ...
- // inside your connected component
- 
- render() {
-    const { showYourFeatureName } = this.props;
- 
-    return (
-      { showYourFeatureName && <NewFeature /> }
-    );
- }
- ```
- 
- Currently the feature toggle values are only available on the global redux state.
+```js
+function mapStateToProps(state) {
+  return {
+    showYourFeatureName:
+      appNameThenYourFeatureName(state),
+  };
+}
+
+...
+// inside your connected component
+
+render() {
+   const { showYourFeatureName } = this.props;
+
+   return (
+     { showYourFeatureName && <NewFeature /> }
+   );
+}
+```
 
 9. Use the [Flipper UI](#flipper_ui) to test out the toggle locally. Refresh the page to update the feature toggle state. This value can take up to a minute to update in staging and production.
+
+#### Backend example
+
+```rb
+def base_method_name(params)
+  if Flipper.enabled?(:feature_flag, @current_user)
+    base_method_name_feature_enabled(params)
+  else
+    base_method_name_feature_disabled(params)
+  end
+end
+def base_method_name_feature_enabled(params)
+  # How it behaves with the feature flag enabled
+end
+def base_method_name_feature_disabled(params)
+  # How it behaves without the feature flag enabled 
+end
+
+### spec
+RSpec.describe Object do
+  context "Feature feature_flag=true" do
+    before do
+      Flipper.enable(:feature_flag)
+    end
+    it "behaves this way with the feature enabled" do
+    end
+  end
+  context "Feature feature_flag=false" do
+    before do
+      Flipper.disable(:feature_flag)
+    end
+    it "behaves this way with the feature disabled" do
+    end
+  end
+end
+```
 
 ## <a id="flipper_ui">Enabling and disabling features</a>
 
@@ -141,7 +177,7 @@ flipper:
    <img width="1287" alt="Screen Shot" src="https://user-images.githubusercontent.com/19188/74881655-b4d11a80-533b-11ea-8e97-fdea24c10830.png">
 
 ## Testing new applications and updates to existing applications
-_Use the method described above to [add](#add-feature-flag) and [enable/disable](#flipper_ui) feature toggles. The method described in this section will eventually be phased out._
+_Use the method described above to [add](#add-feature-flag) and [enable/disable](#flipper_ui) feature toggles. The method described in this section will be phased out._
 
 In the [staging environment](https://staging.va.gov), you can test unreleased features or applications using [!isProduction()](https://github.com/department-of-veterans-affairs/vets-website/blob/10380007a3ec77047be10e4fb2a42d343c22c5d3/src/platform/utilities/environment/index.js).
 
@@ -152,7 +188,7 @@ In the [production environment](https://www.va.gov), you can test unreleased fea
 <b>Note:</b> Unreleased applications can be made available on production behind a password by setting `protected: yes` in [react_routes.yml](https://github.com/department-of-veterans-affairs/devops/blob/e1030d1a499e39eaeceb8f4bdcbd33baf7ee946d/ansible/deployment/config/revproxy-vagov/vars/react_routes.yml). External teams should work with their DSVA contact to request support for enabling this.
 
 ## Testing content pages
-_Use the method described above to [add](#add-feature-flag) and [enable/disable](#flipper_ui) feature toggles. The method described in this section will eventually be phased out._
+_Use the method described above to [add](#add-feature-flag) and [enable/disable](#flipper_ui) feature toggles. The method described in this section will be phased out._
 
 ### App-landing pages generated by manifest.json
 Applications can control the HTML landing page associated with the application via a `template` property in the application's `manifest.json`. Properties defined inside the `template` property will pass through the Metalsmith templating process the same way as a vagov-content `.md` file. This means that via the `template` property, your `manifest.json` can implement a feature flag the same way as a `.md` file to prevent its HTML page from rendering in production environments. For example:
@@ -193,7 +229,7 @@ localhost: false
 ```
 
 ## Testing CMS feature flags
-_Use the method described above to [add](#add-feature-flag) and [enable/disable](#flipper_ui) feature toggles. The method described in this section will eventually be phased out._
+_Use the method described above to [add](#add-feature-flag) and [enable/disable](#flipper_ui) feature toggles. The method described in this section will be phased out._
 
 VA.gov creates some pages based on content from the VA's Drupal CMS. The CMS has its own content model, which can sometimes change. When those changes modify the existing structure of the content model, the queries and templates in vets-website that expect a different model may break. And because the CMS and vets-website are separate systems with different deployment processes, we can't push up changes in both systems simultaneously. In order to keep the two systems in sync, we need to be able to turn features on and off in vets-website depending on what environment we're in, and update that feature state whenever a cms deployment happens.
 
@@ -224,9 +260,9 @@ All liquid templates have access to the current feature flag state:
 
 **Note:** From within the JavaScript context, the feature flags are in `global.cmsFeatureFlags`, but within the Liquid template context, they can be found in `enabledFeatureFlags`.
 
-## Communication
+## Need assistance?
 
-Currently feature toggles are managed by designated administrators (ask in #VSP-Platform-Support slack), but users will be allowed more access in the future. For now, tag the following groups in Slack if you need more information:
+Currently feature toggles are managed by designated administrators (ask in the #VSP-Platform-Support Slack channel), but users will be allowed more access in the future. For now, tag the following groups in Slack if you need more information:
 - Troubleshooting: #vsp-product-support
 - Onboarding: #vsp-product-support
 - Maintenance: #vsp-tools-fe
