--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -424,12 +424,15 @@ For the code implementation, see the [review folder](https://github.com/departme
 Use this feature to require a user to agree they have read terms and conditions, a privacy policy, or any other text before submitting your form. It includes a checkbox and short-form text that can include relevant links to additional information on separate pages.
 
 To configure this feature, place a `preSubmitInfo` object in the `formConfig`. These are the available options:
-* `notice`: (Optional) A text string or [React element](https://reactjs.org/docs/rendering-elements.html) placed above the checkbox and submit button. If the form definition file is `.jsx` the definition can be inline, or use `import` to reference an external component. If not specified, no notice appears.
-* `required`: (Optional) When `true`, a checkbox and label appear above the submit button. The user must check the box before submitting the form. When `false` or not specified, the `field`, `label`, and `error` options are not used.
-* `field`: The name of the form field for the required checkbox. This field has the value `true` in the submitted form data.
-* `label`: A text string or React element that labels the checkbox.
-* `error`: A text string or React element displayed as an error message if the user attempts to submit the form without checking the checkbox.
-* `CustomComponent`: A React element that will replace the default [`PreSubmitSection`](https://github.com/department-of-veterans-affairs/vets-website/blob/f6a5a742b870869550ab2f5af72428353a5a89da/src/platform/forms-system/src/js/components/PreSubmitSection.jsx#L5) component.
+
+| Prop | Description | Required |
+| -------- | ------ | ------ |
+| notice | A text string or [React element](https://reactjs.org/docs/rendering-elements.html) placed above the checkbox and submit button. If the form definition file is `.jsx` the definition can be inline, or use `import` to reference an external component. If not specified, no notice appears. | false, but recommended |
+| required | When `true`, a checkbox and label appear above the submit button. The user must check the box before submitting the form. When `false` or not specified, the `field`, `label`, and `error` options are not used. | false |
+| field | The name of the form field for the required checkbox. This field has the value `true` in the submitted form data. | true |
+| label | A text string or React element that labels the checkbox. | true |
+| error | A text string or React element displayed as an error message if the user attempts to submit the form without checking the checkbox. | false |
+| CustomComponent | A React element that will replace the default [`PreSubmitSection`](https://github.com/department-of-veterans-affairs/vets-website/blob/f6a5a742b870869550ab2f5af72428353a5a89da/src/platform/forms-system/src/js/components/PreSubmitSection.jsx#L5) component. | false |
 
 This is an example of `preSubmitInfo`:
 
@@ -439,7 +442,6 @@ preSubmitInfo: {
   field: 'privacyAgreementAccepted',
   label: <span>I have read and accept the <a href="/privacy">privacy policy</a>.</span>,
   error: 'You must accept the privacy policy before continuing',
-  // optional override
   CustomComponent: CustomPreSubmitComponent
 }
 ```
@@ -451,11 +453,18 @@ preSubmitInfo: {
 
 ### Usage guidelines
 
-If you don't specify a `preSubmitInfo` section, no notice or checkbox appears above the submit button. Most applications will want to give some sort of notice to the user before they submit the form. Although this section is optional, we recommend you specify it.
+* If you don't specify a **PreSubmitSection**, no notice or checkbox appears above the submit button. Most applications will want to give some sort of notice to the user before they submit the form. Although this section is optional, we recommend you specify it.
 
-`sectionCompleted` is a function which expects a single boolean parameter indicating when all conditions of your `preSubmitInfo.CustomComponent` are met. Until `sectionCompleted` is called with `true`, the form will not submit.
+* For the **code implementation**, see [PreSubmitSection](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/components/PreSubmitSection.jsx) and [SubmitController](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/review/SubmitController.jsx).
 
-For the code implementation, see [PreSubmitSection](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/components/PreSubmitSection.jsx) and [SubmitController](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/review/SubmitController.jsx).
+See below for CustomComponent params
+
+| Prop | Description | Required |
+| -------- | ------ | ------ |
+| formData | Data object from the rest of the form, so your CustomComponent can be reactive to external data | false |
+| preSubmitInfo | Data object, See table above | false |
+| showError | Boolean for your CustomComponent to toggle errors | false |
+| sectionCompleted | Is a function, provided by `PreSubmitSection`, which expects a single boolean parameter indicating when all conditions of your `preSubmitInfo.CustomComponent` are met. Until `sectionCompleted` is called with `true`, the form will not submit. | true |
 
 ## Remote error and event monitoring
 
