--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -463,7 +463,7 @@ See below for CustomComponent params
 | -------- | ------ | ------ |
 | formData | Data object from the rest of the form, so your CustomComponent can be reactive to external data | false |
 | preSubmitInfo | Data object, See table above | false |
-| showError | Boolean for your CustomComponent to toggle errors | false |
+| showError | Boolean to toggle errors, errors can also be handled internally | false |
 | sectionCompleted | Is a function, provided by `PreSubmitSection`, which expects a single boolean parameter indicating when all conditions of your `preSubmitInfo.CustomComponent` are met. Until `sectionCompleted` is called with `true`, the form will not submit. | true |
 
 ## Remote error and event monitoring
