--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -425,7 +425,7 @@ Use this feature to require a user to agree they have read terms and conditions,
 
 To configure this feature, place a `preSubmitInfo` object in the `formConfig`. These are the available options:
 
-| Prop | Description | Required |
+| Option | Description | Required |
 | -------- | ------ | ------ |
 | CustomComponent | A React element that will replace the default [`PreSubmitSection`](https://github.com/department-of-veterans-affairs/vets-website/blob/f6a5a742b870869550ab2f5af72428353a5a89da/src/platform/forms-system/src/js/components/PreSubmitSection.jsx#L5) component. | false |
 | error | A text string or React element displayed as an error message if the user attempts to submit the form without checking the checkbox. | false |
